# AI-Research-Paper-Summarizer-and-Critque

./: .gitignore  README.md  pyproject.toml
backend/: main.py  pyproject.toml
backend/server/: main.py
backend/server/auth/: auth_utils.py  code.py  hash_utils.py  models.py  route.py
backend/server/config/: config.py  db.py
backend/server/papers/: route.py  vectorstore.py
backend/server/summary/: models.py  query.py  route.py
backend/server/utils/: util.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/axios/: client.ts
frontend/src/api/config/: env.ts  envConfig.ts
frontend/src/api/services/: ApiService.ts
frontend/src/components/: ChatNav.tsx  FileUploader.tsx  PaperSummaryCard.tsx  SummaryCard.tsx
frontend/src/components/shared/: Loader.tsx
frontend/src/context/: AuthContext.tsx  useAuthContext.ts
frontend/src/context/authContext/: AuthContext.tsx  authProvider.jsx  createAuthContext.ts
frontend/src/context/paperContext/: PaperContext.tsx  createPaperContext.ts
frontend/src/hooks/: queriesAndMutation.ts  useAuthContext.ts  usePaperContext.ts
frontend/src/lib/validations/: index.ts
frontend/src/pages/auth/: AuthLayout.tsx  Login.tsx  ProtectedRoute.tsx  SignUp.tsx
frontend/src/pages/main/: Chat.tsx  Dashboard.tsx  Landing.tsx  MainLayout.tsx  Summary.tsx  Upload.tsx  (+1 more)
frontend/src/types/: index.ts
frontend/src/utils/: pdf2img.ts
server/: main.py
server/config/: db.py
server/papers/: route.py  vectorstore.py
server/summary/: query.py  route.py
