[project]
name = "ai-research-paper-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.118.0",    
    "requests>=2.32.5",     
    "langchain>=0.3.27",    
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.77",
    "uvicorn>=0.37.0",
]
